[tool.poetry]
name = "catfacts"
version = "0.1.0"
description = ""
authors = ["cuvner <chriscourage699@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
